--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "description": "Starter for your Electron application. Out of the box ready for serious stuff.",
   "version": "0.1.0",
   "author": "Mr Gumby",
+  "private": true,
   "main": "background.js",
   "dependencies": {
     "cannon": "^0.6.2",
