--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "asar": "^0.7.2",
+    "babel-preset-es2015-rollup": "^1.1.1",
     "electron-prebuilt": "^0.35.1",
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
@@ -8,6 +9,7 @@
     "gulp-util": "^3.0.6",
     "q": "^1.4.1",
     "rollup": "^0.21.0",
+    "rollup-plugin-babel": "^2.3.9",
     "tree-kill": "^0.1.1",
     "yargs": "^3.15.0"
   },
