--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cannon": "^0.6.2",
     "fs-jetpack": "^0.7.0",
+    "lodash": "^4.4.0",
     "three-pointerlock": "0.0.2",
     "three.js": "^0.73.0"
   }
