--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "release": "gulp release --env=production",
     "start": "node ./tasks/start",
     "test": "node ./tasks/start --env=test"
+  },
+  "dependencies": {
+    "stats.js": "^1.0.0"
   }
 }
