fix build after 8 years + demo

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "pretest": "gulp build --env=test",
     "test": "electron-mocha build --renderer",
     "install-native": "node ./tasks/install_native_module"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
